# ime-cursor

./: Cargo.toml
assets/: arrow_chi.cur  ibeam_chi.cur  link_chi.cur
src/: channel.rs  cursor.rs  ime.rs  main.rs  monitor.rs
src/ime/: windows.rs
